tests/baselines/reference/cloduleTest1.errors.txt
cloduleTest1.ts(5,3): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== cloduleTest1.ts (1 errors) ====
      declare function $(selector: string): $;  
      interface $ {
          addClass(className: string): $;
      }
      module $ {
      ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export interface AjaxSettings {
        }
        export function ajax(options: AjaxSettings) { }
      }
      var it: $ = $('.foo').addClass('bar');
    